<resources>
    <string name="app_name" translatable="false">Third Eye</string>

    <!-- Permissions -->
    <string name="permissions_use_your">Use your</string>
    <string name="permissions_camera">camera</string>
    <string name="permissions_and_your">and your</string>
    <string name="permissions_location">location</string>
    <string name="permissions_to_open_your">to open your</string>
    <string name="permissions_both_granted">Your Third Eye is open!</string>
    <string name="permissions_both_denied">Third Eye requires your Camera and your Location to display your surroundings!</string>
    <string name="permissions_camera_denied">Third Eye requires your Camera to display your surroundings!</string>
    <string name="permissions_location_denied">Third Eye requires your Location to display your surroundings!</string>
    <string name="permissions_settings">Settings</string>
    <string name="permissions_cancel">Cancel</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="permissions_open_settings">Third Eye requires your permission to use your Camera and your Location to display your surroundings. Please open Settings and go to Permissions to enable Camera and Location.</string>

    <!-- Overlay -->
    <string name="meters">m</string>
    <string name="kilometers">km</string>

    <!-- Menu -->
    <string name="refine_search">Refine Search</string>

    <!-- Volley Errors -->
    <string name="connection_unavailable">Please check your connection!</string>
    <string name="service_unavailable">Service currently unavailable.</string>

    <!-- Details -->
    <string name="address_unavailable">Street address unavailable.</string>
    <string name="contact_unavailable">Contact information unavailable.</string>
    <string name="open_now">Open now!</string>
    <string name="closed">Closed now.</string>
    <string name="rated">rated</string>
    <string name="stars">stars</string>
    <string name="star">star</string>
    <string name="reviewed">Reviewed</string>
    <string name="a11y_hours_expander">Button: hours of operation</string>

    <!-- Settings -->
    <string name="adding">Now displaying nearby</string>
    <string name="removing">No longer displaying nearby</string>
    <string name="cafes">cafes</string>
    <string name="restaurants">restaurants</string>
    <string name="bars">bars</string>
    <string name="parks">parks</string>
    <string name="bookstores">bookstores</string>
    <string name="galleries">art galleries</string>
    <string name="movies">movie theaters</string>
    <string name="lodgings">lodgings</string>
    <string name="groceries">groceries</string>
    <string name="atms">ATMs</string>
    <string name="pharmacies">pharmacies</string>
    <string name="transit">transit stations</string>

    <!-- Shared Preferences -->
    <string name="preferences_types_key" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPES_KEY</string>
    <string name="preferences_type_cafe" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPE_CAFE</string>
    <string name="preferences_type_restaurant" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPE_RESTAURANT</string>
    <string name="preferences_type_bar" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPE_BAR</string>
    <string name="preferences_type_park" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPE_PARK</string>
    <string name="preferences_type_bookstore" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPE_BOOKSTORE</string>
    <string name="preferences_type_gallery" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPE_GALLERY</string>
    <string name="preferences_type_movie" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPE_MOVIE</string>
    <string name="preferences_type_lodging" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPE_LODGING</string>
    <string name="preferences_type_grocery" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPE_GROCERY</string>
    <string name="preferences_type_atm" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPE_ATM</string>
    <string name="preferences_type_pharmacy" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPE_PHARMACY</string>
    <string name="preferences_type_transit" translatable="false">com.hk47.realityoverlay.PREFERENCES_TYPE_TRANSIT</string>

</resources>
