<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/permissions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/standard_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="@dimen/permissions_margin"
                    android:layout_marginStart="@dimen/permissions_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permissions_use_your"
                    android:textSize="@dimen/sub_header_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/permissions_margin"
                    android:layout_marginStart="@dimen/permissions_margin"
                    android:text="@string/permissions_camera"
                    android:textStyle="bold"
                    android:textSize="@dimen/sub_header_text" />

                <ImageView
                    android:layout_width="@dimen/half_icon"
                    android:layout_height="@dimen/half_icon"
                    android:layout_marginLeft="@dimen/permissions_margin"
                    android:layout_marginStart="@dimen/permissions_margin"
                    android:src="@drawable/ic_photo_camera_black_48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/half_icon"
                    android:layout_height="@dimen/half_icon"
                    android:src="@drawable/ic_location_on_black_48dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/permissions_and_your"
                    android:textSize="@dimen/sub_header_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/permissions_margin"
                    android:layout_marginStart="@dimen/permissions_margin"
                    android:layout_marginRight="@dimen/permissions_margin"
                    android:layout_marginEnd="@dimen/permissions_margin"
                    android:text="@string/permissions_location"
                    android:textStyle="bold"
                    android:textSize="@dimen/sub_header_text" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/permissions_to_open_your"
                android:textSize="@dimen/sub_header_text" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/standard_margin"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/app_name_text"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/button_diameter"
        android:layout_height="@dimen/button_diameter"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:onClick="onEyeClicked"
        android:src="@mipmap/ic_launcher" />

</LinearLayout>
